--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
         <meta name="description" content="ClashNode 每天会更新免费节点，包括 SSR、V2ray 和 Clash 等类型。它会提供详细的节点信息，如速度和覆盖地区等，还附有简明教程。ClashNode 可以满足用户各种需求，为用户提供稳定可靠的免费节点，帮助用户轻松实现科学上网。" />
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/addons/xcblog/css/clashnode/style-starter.css">
-    </head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8B9V1K3BBT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8B9V1K3BBT');
+</script>
+</head>
 
 <body>
         <!-- header -->
