--- a/free-nodes/2024-2-14-free-clash.htm
+++ b/free-nodes/2024-2-14-free-clash.htm
@@ -11,7 +11,17 @@
         <meta name="description" content="2月14日节点订阅更新,Clash/Shadowrocket/V2ray/SSR免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了新加坡、美国、韩国、加拿大、欧洲、日本、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/addons/xcblog/css/clashnode/style-starter.css">
-    </head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8B9V1K3BBT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8B9V1K3BBT');
+</script>
+</head>
 
 <body>
         <!-- header -->
