--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
                                                 <div class="row">
                             <div class="col-lg-4">
                                 <div class="position-relative">
-                                    <a href="/free-nodes/2024-2-14-free-clash.htm">
-                                        <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="" class="radius-image img-fluid">
+                                    <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
+                                        <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="" class="radius-image img-fluid">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-lg-8 mt-lg-0 mt-5">
-                                <a href="/free-nodes/2024-2-14-free-clash.htm">
-                                    <h3 class="title-big">2月14日22.3M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</h3>
+                                <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
+                                    <h3 class="title-big">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</h3>
                                 </a>
-                                <p class="mt-4">这一次的节点更新覆盖了新加坡、美国、韩国、加拿大、欧洲、日本、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p class="mt-4">这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、加拿大、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 <p class="title-small mb-2 pull-right">
                                     2月14日                                </p>
                             </div>
@@ -126,8 +126,18 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-14-free-clash.htm">2月14日22.3M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、美国、韩国、加拿大、欧洲、日本、香港等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-14-free-node-subscribe.htm">2月14日20.3M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、加拿大、韩国、香港、美国、日本等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-14-free-ssr-node.htm">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、韩国、新加坡、欧洲、加拿大、美国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
