--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             <div class="col-lg-4">
                                 <div class="position-relative">
                                     <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
-                                        <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="" class="radius-image img-fluid">
+                                        <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                                     </a>
                                 </div>
                             </div>
