--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                                                 <div class="row">
                             <div class="col-lg-4">
                                 <div class="position-relative">
+                                    <a href="/free-nodes/2024-2-15-node-share-links.htm">
+                                        <img src="/uploads/20240214/617a204e85c6866d8bf813a7b5c311bb.webp" alt="2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 mt-lg-0 mt-5">
+                                <a href="/free-nodes/2024-2-15-node-share-links.htm">
+                                    <h3 class="title-big">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</h3>
+                                </a>
+                                <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、加拿大、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p class="title-small mb-2 pull-right">
+                                    2月15日                                </p>
+                            </div>
+                        </div>
+                                                <div class="row">
+                            <div class="col-lg-4">
+                                <div class="position-relative">
                                     <a href="/free-nodes/2024-2-14-free-ssr-node.htm">
                                         <img src="/uploads/20240214/8a5a27c189a802d655c0f68ddaa2713f.webp" alt="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                                     </a>
@@ -122,6 +139,16 @@
                     </div>
                     <div class="col-md-4 w3l-services">
                         <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-15-node-share-links.htm">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、日本、韩国、加拿大、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
