--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                                                 <div class="row">
                             <div class="col-lg-4">
                                 <div class="position-relative">
+                                    <a href="/free-nodes/2024-2-18-clash-windows.htm">
+                                        <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 mt-lg-0 mt-5">
+                                <a href="/free-nodes/2024-2-18-clash-windows.htm">
+                                    <h3 class="title-big">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</h3>
+                                </a>
+                                <p class="mt-4">这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p class="title-small mb-2 pull-right">
+                                    2月18日                                </p>
+                            </div>
+                        </div>
+                                                <div class="row">
+                            <div class="col-lg-4">
+                                <div class="position-relative">
                                     <a href="/free-nodes/2024-2-17-free-node-subscribe.htm">
                                         <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
                                     </a>
@@ -173,6 +190,16 @@
                     </div>
                     <div class="col-md-4 w3l-services">
                         <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-18-clash-windows.htm">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、韩国、香港、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
