--- a/sitemap.html
+++ b/sitemap.html
@@ -114,8 +114,8 @@
 	<div id="top">
 		<nav>clashnode.github.io HTML Site Map</nav>
 		<h3>
-<span>Last updated: 2024, February 14<br />
-Total pages: 3</span>
+<span>Last updated: 2024, February 19<br />
+Total pages: 8</span>
 <a href="https://clashnode.github.io">clashnode.github.io Homepage</a>
 </h3></div>
 	<div id="cont">
@@ -125,9 +125,14 @@ Total pages: 3</span>
             
 <li class="lpage last-page"><a href="https://clashnode.github.io/" title="ClashNode2024每天更新 | V2ray/SSR/Clash免费节点订阅">ClashNode2024每天更新 | V2ray/SSR/Clash免费节点订阅</a></li><li><ul class="level-1">
 
-            <li class="lhead">free-nodes/  <span class="lcount">2 pages</span></li>
+            <li class="lhead">free-nodes/  <span class="lcount">7 pages</span></li>
             
 <li class="lpage"><a href="https://clashnode.github.io/free-nodes/" title="免费节点 - Clash Node演示站">免费节点 - Clash Node演示站</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-19-free-node-subscribe-links.htm" title="2月19日20M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接">2月19日20M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-18-clash-windows.htm" title="2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接">2月18日21.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-17-free-node-subscribe.htm" title="2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">2月17日18M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-16-clash-v2ray-ss-ssr.htm" title="2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接">2月16日20.4M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</a></li>
+<li class="lpage"><a href="https://clashnode.github.io/free-nodes/2024-2-15-node-share-links.htm" title="2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接">2月15日20.1M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></li>
 <li class="lpage last-page"><a href="https://clashnode.github.io/free-nodes/2024-2-14-free-ssr-node.htm" title="2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接">2月14日19.8M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</a></li>
 </ul></li>
 </ul>
