--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -88,6 +88,23 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-2-20-free-clash.htm">
+                                <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-2-20-free-clash.htm">
+                            <h3 class="title-big">2月20日19.2M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了美国、日本、韩国、香港、加拿大、新加坡、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            2月20日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-2-19-free-node-subscribe-links.htm">
                                 <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="" class="radius-image img-fluid">
                             </a>
@@ -191,6 +208,16 @@
                             </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-20-free-clash.htm">2月20日19.2M/S|SSR/V2ray/Clash/Shadowrocket免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、韩国、香港、加拿大、新加坡、欧洲等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
