--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                                                 <div class="row">
                             <div class="col-lg-4">
                                 <div class="position-relative">
+                                    <a href="/free-nodes/2024-2-22-free-node-subscribe.htm">
+                                        <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接" class="radius-image img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 mt-lg-0 mt-5">
+                                <a href="/free-nodes/2024-2-22-free-node-subscribe.htm">
+                                    <h3 class="title-big">2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h3>
+                                </a>
+                                <p class="mt-4">这一次的节点更新覆盖了新加坡、韩国、美国、加拿大、香港、欧洲、日本等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p class="title-small mb-2 pull-right">
+                                    2月22日                                </p>
+                            </div>
+                        </div>
+                                                <div class="row">
+                            <div class="col-lg-4">
+                                <div class="position-relative">
                                     <a href="/free-nodes/2024-2-21-node-share-links.htm">
                                         <img src="/uploads/20240214/76102f0ccd571ad24bf10b61732c8d20.webp" alt="2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
                                     </a>
@@ -241,6 +258,16 @@
                     </div>
                     <div class="col-md-4 w3l-services">
                         <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-22-free-node-subscribe.htm">2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、韩国、美国、加拿大、香港、欧洲、日本等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
