--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -88,6 +88,23 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-2-23-shadowrocket-node.htm">
+                                <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-2-23-shadowrocket-node.htm">
+                            <h3 class="title-big">2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、美国、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            2月23日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-2-22-free-node-subscribe.htm">
                                 <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="" class="radius-image img-fluid">
                             </a>
@@ -242,6 +259,16 @@
                             </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-23-shadowrocket-node.htm">2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、美国、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
