--- a/free-nodes/2024-2-21-node-share-links.htm
+++ b/free-nodes/2024-2-21-node-share-links.htm
@@ -112,6 +112,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-2-23-shadowrocket-node.htm">2月23日22.1M/S|Shadowrocket/Clash/SSR/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、美国、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-2-22-free-node-subscribe.htm">2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></h4>
                 <p>这一次的节点更新覆盖了新加坡、韩国、美国、加拿大、香港、欧洲、日本等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
