--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                                                 <div class="row">
                             <div class="col-lg-4">
                                 <div class="position-relative">
+                                    <a href="/free-nodes/2024-3-2-free-ssr-node.htm">
+                                        <img src="/uploads/20240214/830880c859159c166b79b0f24c26ce86.webp" alt="3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接" class="radius-image img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-8 mt-lg-0 mt-5">
+                                <a href="/free-nodes/2024-3-2-free-ssr-node.htm">
+                                    <h3 class="title-big">3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</h3>
+                                </a>
+                                <p class="mt-4">这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、香港、美国、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                <p class="title-small mb-2 pull-right">
+                                    3月2日                                </p>
+                            </div>
+                        </div>
+                                                <div class="row">
+                            <div class="col-lg-4">
+                                <div class="position-relative">
                                     <a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">
                                         <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
                                     </a>
@@ -398,6 +415,16 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-3-2-free-ssr-node.htm">3月2日21M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了新加坡、加拿大、韩国、欧洲、香港、美国、日本等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-3-1-clash-node-daily-updates.htm">3月1日18.5M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
                 <p>这一次的节点更新覆盖了美国、韩国、香港、新加坡、加拿大、日本、欧洲等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
@@ -480,16 +507,6 @@
             <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-2-22-free-node-subscribe.htm">2月22日20.2M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</a></h4>
                 <p>这一次的节点更新覆盖了新加坡、韩国、美国、加拿大、香港、欧洲、日本等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-2-21-node-share-links.htm">2月21日19.4M/S|Clash/Shadowrocket/SSR/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、新加坡、香港、日本、欧洲、加拿大等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
