--- a/date/2024-02/index.htm
+++ b/date/2024-02/index.htm
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 
-                <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/addons/xcblog/index/month_category?page=2">2</a></li> <li><a href="/addons/xcblog/index/month_category?page=2">&raquo;</a></li></ul>            </div>
+                <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2024-02/page-2.htm">2</a></li> <li><a href="/date/2024-02/page-2.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
 <div class="row w3l-achievements">
