--- a/date/2024-03/page-2.htm
+++ b/date/2024-03/page-2.htm
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 
-                <ul class="pagination"><li><a href="/addons/xcblog/index/month_category?page=1">&laquo;</a></li> <li><a href="/addons/xcblog/index/month_category?page=1">1</a></li><li class="active"><span>2</span></li><li><a href="/addons/xcblog/index/month_category?page=3">3</a></li> <li><a href="/addons/xcblog/index/month_category?page=3">&raquo;</a></li></ul>            </div>
+                <ul class="pagination"><li><a href="/date/2024-03/">&laquo;</a></li> <li><a href="/date/2024-03/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2024-03/page-3.htm">3</a></li> <li><a href="/date/2024-03/page-3.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
 <div class="row w3l-achievements">
