--- a/date/2024-03/page-3.htm
+++ b/date/2024-03/page-3.htm
@@ -89,6 +89,23 @@
                                 <div class="row">
                     <div class="col-lg-4">
                         <div class="position-relative">
+                            <a href="/free-nodes/2024-3-6-free-ssr-node.htm">
+                                <img src="https://clashnode.github.io/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接" class="radius-image img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-8 mt-lg-0 mt-5">
+                        <a href="/free-nodes/2024-3-6-free-ssr-node.htm">
+                            <h3 class="title-big">3月6日22.2M/S|V2ray/SSR/Shadowrocket/Clash免费节点每天更新订阅链接</h3>
+                        </a>
+                        <p class="mt-4">这一次的节点更新覆盖了韩国、香港、加拿大、欧洲、新加坡、日本、美国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        <p class="title-small mb-2 pull-right">
+                            3月6日                        </p>
+                    </div>
+                </div>
+                                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="position-relative">
                             <a href="/free-nodes/2024-3-5-free-subscribe-node.htm">
                                 <img src="https://clashnode.github.io/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="3月5日19.2M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接" class="radius-image img-fluid">
                             </a>
@@ -179,6 +196,16 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
+                <h4><a href="/free-nodes/2024-3-26-clash-node.htm">3月26日更新18.2M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、日本、新加坡、加拿大、美国、香港等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
                 <h4><a href="/free-nodes/2024-3-25-free-ssr-node.htm">3月25日更新18.7M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点</a></h4>
                 <p>这一次的节点更新覆盖了新加坡、美国、加拿大、香港、日本、韩国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
@@ -265,23 +292,13 @@
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-16-free-clash-subscribe.htm">3月16日22.8M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、日本、欧洲、加拿大、美国、香港等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
+                                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
                                 <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
                             </div>
         </div>
