--- a/free-nodes/2024-3-19-clash-v2ray-ss-ssr.htm
+++ b/free-nodes/2024-3-19-clash-v2ray-ss-ssr.htm
@@ -4,7 +4,7 @@
 <head>
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>3月19日19.1M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
         <meta name="keywords" content="3月19日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Node演示站" />
@@ -75,7 +75,7 @@
     <section class="w3l-about-breadcrumb text-center">
         <div class="breadcrumb-bg breadcrumb-bg-about py-sm-5 py-4">
             <div class="container py-2">
-                <h1 class="title">3月19日19.1M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</h1>
+                <h1 class="title" style="word-break: break-all;">3月19日19.1M/S|SSR/V2ray/Shadowrocket/Clash免费节点每天更新订阅链接</h1>
                 <ul class="breadcrumbs-custom-path mt-2">
                     <li><a href="/">首页</a></li>
                     <li><span class="fa fa-arrow-right mx-2" aria-hidden="true"></span></li>
