--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>ClashNode2024每天更新 | V2ray/SSR/Clash免费节点订阅</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
         <meta name="keywords" content="Clash免费节点,ssr,shadowsocks,科学上网,翻墙,Clash Node" />
