--- a/date/2024-02/page-2.htm
+++ b/date/2024-02/page-2.htm
@@ -4,7 +4,7 @@
 <head>
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>2024-02归档 - Clash Node演示站</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
         <meta name="keywords" content="2024-02归档" />
