--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -4,7 +4,7 @@
 <head>
         <link rel="canonical" href="https://clashnode.github.io" />
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>免费节点 - Clash Node演示站 - 第5页</title>
     <link rel="icon" href="/assets/addons/xcblog/img/clashnode/favicon.ico" type="image/x-icon"/>
         <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
